--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "axios": "^1.6.2",
     "form-data": "^4.0.0",
     "glob": "^10.3.10",
     "jest": "29.3.1",
@@ -29,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-redux": "8.0.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "redux": "4.2.1",
     "serve": "^14.2.3",
     "ts-node": "10.9.1",
